--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ body {
   width: 50%;
 }
 .first .left-col .head {
-  margin-left: 2em;
+  margin-left: 1em;
   font-weight: 400;
   font-size: 4em;
   line-height: 1.3em;
@@ -95,24 +95,28 @@ body {
   font-family: Futura;
   font-weight: 500;
 }
-.first .horsesFace {
-  width: 100%;
-  height: 100%;
-  width: auto;
-  flex: 1;
+.first .right-col {
   text-align: right;
+  width: 50%;
+}
+.first .right-col .horsesFace {
+  width: 100%;
+  height: auto;
 }
 
-.video1 {
-  text-align: center;
-}
 .video1 .container {
-  height: 864px;
-}
-.video1 iframe {
-  max-width: 1920px;
+  position: relative;
   width: 80%;
-  height: 80%;
+  padding-bottom: 56.25%;
+  height: 0;
+  margin: 0 auto;
+}
+.video1 .container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 nav.menu-btn {
@@ -154,9 +158,6 @@ nav li a:hover {
 }
 
 @media only screen and (min-width: 768px) {
-  .subhead {
-    margin-top: 5em;
-  }
   .mobile-menu, .mobile-menu-exit {
     display: none;
   }
@@ -175,7 +176,6 @@ nav li a:hover {
     padding: 0;
   }
   .navbar nav ul {
-    list-style-type: none;
     display: flex;
   }
   .navbar nav a {
@@ -185,7 +185,6 @@ nav li a:hover {
   }
   .navbar nav ul.primary-nav {
     margin: 0;
-    list-style: none;
   }
   .navbar nav li.current a {
     font-weight: bold;
@@ -202,7 +201,7 @@ nav li a:hover {
     color: white;
   }
 }
-@media only screen and (min-width: 768px) and (min-width: 1920px) {
+@media only screen and (min-width: 1920px) {
   .container {
     max-width: 1920px;
     margin: 0 auto;
