--- a/css/main.scss
+++ b/css/main.scss
@@ -101,7 +101,7 @@ body {
         width: 50%;
 
         .head{
-            margin-left: 2em;
+            margin-left: 1em;
             font-weight: 400;
             font-size: 4em;
             line-height: 1.3em;
@@ -116,28 +116,33 @@ body {
         }
     }
 
-    .horsesFace{
-        width: 100%;
-        height: 100%;
-        width: auto;
-        flex: 1;
+    .right-col{
         text-align: right;
+        width: 50%;
+        
+        .horsesFace{
+            width: 100%;
+            height: auto;
+        }
     }
 }
 
 .video1{
 
-    text-align: center;
-
     .container{
-        height: 864px;
-    }
-
-    iframe{
-        max-width: 1920px;
+        position: relative;
         width: 80%;
-        height: 80%;        
-        // display: block;
+        padding-bottom: 56.25%; 
+        height: 0;
+        margin: 0 auto;
+
+        iframe{
+            position: absolute;
+            top:0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
@@ -188,10 +193,6 @@ nav {
 
 @media only screen and (min-width: 768px) {
 
-    .subhead{
-        margin-top: 5em;
-    }
-
     .mobile-menu, .mobile-menu-exit {
         display: none;
     }
@@ -212,7 +213,6 @@ nav {
         padding: 0;
 
         ul {
-            list-style-type: none;
             display: flex;
         }
 
@@ -224,8 +224,6 @@ nav {
 
         ul.primary-nav {
             margin: 0;
-            list-style: none;
-
         }
 
         li.current a {
@@ -244,6 +242,8 @@ nav {
             }
         }
     }
+}
+
 
     @media only screen and (min-width: 1920px){
         .container {
@@ -251,4 +251,3 @@ nav {
             margin: 0 auto;
         }
     }
-}
